Setting it up so that I can view it on my phone

--- a/Lab1-babypython_pk.ipynb
+++ b/Lab1-babypython_pk.ipynb
@@ -41,7 +41,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##The Python Language\n",
+    "## Quick Intro to Markdowns\n",
+    "\n",
+    "blah\n",
+    "test\n",
+    "\n",
+    "hello\n",
+    "This can use LateX and\n",
+    "\n",
+    "$$\\alpha + \\frac{\\beta}{\\gamma} = \\delta$$\n",
+    "\n",
+    "This can be done inline as well $\\alpha + \\frac{\\beta}{\\gamma} = \\delta$ this is pretty useful.\n",
+    "\n",
+    "- This is how you do a \n",
+    "- unnumbered list\n",
+    "- do stuff\n",
+    "\n",
+    "\n",
+    "1. this is how\n",
+    "1. you do a numbered list\n",
+    "\n",
+    "\n",
+    "This is how you do **bolding** and *itelics for important stuff* and this is a `back tick to indicate a command`\n",
+    "\n",
+    "> This is for a block of quote\n",
+    "\n",
+    "```python\n",
+    "\n",
+    "def func():\n",
+    "    print (\"Hello World\")\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## The Python Language\n",
     "\n",
     "Lets talk about using Python as a calculator..."
    ]
@@ -133,7 +169,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can obtain the type of a variable, and use boolean comparisons tontest these types."
+    "We can obtain the type of a variable, and use boolean comparisons to test these types."
    ]
   },
   {
@@ -241,16 +277,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(<enumerate at 0x108fb0410>, [(1, 1), (2, 4), (3, 9), (4, 16), (5, 25)])"
+       "(<enumerate at 0x5c49730>, [(1, 1), (2, 4), (3, 9), (4, 16), (5, 25)])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,16 +304,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<itertools.izip at 0x108fafb48>"
+       "<itertools.izip at 0x5c4ae18>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,14 +325,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<enumerate object at 0x108fb05f0>\n"
+      "<enumerate object at 0x5c495a0>\n"
      ]
     }
    ],
@@ -306,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +351,7 @@
        "[(0, 1), (1, 4), (2, 9), (3, 16), (4, 25)]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +396,7 @@
        "(180718, 26.69394387001477, 26.0, 21.029872021427462)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +423,7 @@
        "31659"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -438,12 +474,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###The indexing of lists"
+    "### The indexing of lists"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +623,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'off.]'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hamlettokens[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +652,7 @@
        "['HAMLET,', 'OF', 'by', 'Shakespeare']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,21 +665,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "range and xrange get the list of integers upto N. But xrange behaves like an iterator. The reason for this is that there is no point generaing all os a million integers. We can just add 1 to the previous one and save memory. So we trade off storage for computation."
+    "range and xrange get the list of integers upto N. But xrange behaves like an iterator. The reason for this is that there is no point generaing all of a million integers. We can just add 1 to the previous one and save memory. So we trade off storage for computation."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\n",
+      "[0, 1]\n",
+      "[0, 1, 2]\n",
+      "[0, 1, 2, 3]\n",
+      "[0, 1, 2, 3, 4]\n",
+      "[0, 1, 2, 3, 4, 5]\n",
+      "[0, 1, 2, 3, 4, 5, 6]\n",
+      "[0, 1, 2, 3, 4, 5, 6, 7]\n",
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8]\n",
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -632,6 +704,7 @@
     "mylist=[]\n",
     "for i in xrange(10):\n",
     "    mylist.append(i)\n",
+    "    print mylist\n",
     "mylist"
    ]
   },
@@ -646,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +753,7 @@
        "{1: 1, 2: 4, 3: 9, 4: 16, 5: 25}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -699,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -708,7 +781,7 @@
        "{'a': 1, 'b': 2}"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,13 +794,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###and conversion to json"
+    "### and conversion to json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import json"
@@ -735,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -753,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +837,7 @@
        "{u'1': 1, u'2': 4, u'3': 9, u'4': 16, u'5': 25}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -782,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -810,7 +885,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-25-55dfef3ad2e5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlastword\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"k\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-37-7d666f1ef024>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlastword\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"k\"\u001b[0m\u001b[0;31m#cant change a part of a string\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m: 'str' object does not support item assignment"
      ]
     }
@@ -821,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +905,7 @@
        "'.'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -840,19 +915,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
     "You can join a list with a separator to make a string."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -861,7 +934,7 @@
        "\"\\xef\\xbb\\xbfXXXX,HAMLET,,PRINCE,OF,DENMARK,by,William,Shakespeare,PERSONS,REPRESENTED.,Claudius,,King,of,Denmark.,Hamlet,,Son,to,the,former,,and,Nephew,to,the,present,King.,Polonius,,Lord,Chamberlain.,Horatio,,Friend,to,Hamlet.,Laertes,,Son,to,Polonius.,Voltimand,,Courtier.,Cornelius,,Courtier.,Rosencrantz,,Courtier.,Guildenstern,,Courtier.,Osric,,Courtier.,A,Gentleman,,Courtier.,A,Priest.,Marcellus,,Officer.,Bernardo,,Officer.,Francisco,,a,Soldier,Reynaldo,,Servant,to,Polonius.,Players.,Two,Clowns,,Grave-diggers.,Fortinbras,,Prince,of,Norway.,A,Captain.,English,Ambassadors.,Ghost,of,Hamlet's,Father.,Gertrude,,Queen,of,Denmark,,and,Mother,of,Hamlet.,Ophelia,,Daughter,to,Polonius.,Lords,,Ladies,,Officers,,Soldiers,,Sailors,,Messengers,,and,other,Attendants.,SCENE.,Elsinore.,ACT,I.,Scene,I.,Elsinore.,A,platform,before,the,Castle.,[Francisco,at,his,post.,Enter,to,him,Bernardo.],Ber.,Who's,there?,Fran.,Nay,,answer,me:,stand,,and,unfold,yourself.,Ber.,Long,live,the,king!,Fran.,Bernardo?,Ber.,He.,Fra\""
       ]
      },
-     "execution_count": 27,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -882,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -891,7 +964,7 @@
        "(25, 125)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -906,14 +979,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<function square at 0x109a66500> <type 'function'>\n"
+      "<function square at 0x609fa28> <type 'function'>\n"
      ]
     }
    ],
@@ -930,14 +1003,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3 4 <function square at 0x109a66500>\n"
+      "3 4 <function square at 0x609fa28>\n"
      ]
     },
     {
@@ -946,7 +1019,7 @@
        "25"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -967,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -998,25 +1071,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: 0, 1: 1, 2: 8, 3: 27, 4: 64, 5: 125, 6: 216, 7: 343, 8: 512, 9: 729, 10: 1000}\n"
+     ]
+    }
+   ],
    "source": [
-    "#your code here"
+    "#your code here\n",
+    "def myfunc():\n",
+    "    adict={}\n",
+    "    for key in range(11):\n",
+    "        adict[key] = cube(key)\n",
+    "    return adict\n",
+    "print myfunc()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##Booleans and Control-flow\n",
+    "## Booleans and Control-flow\n",
     "\n",
     "Lets test for belonging..."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1025,7 +1112,7 @@
        "True"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1037,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1046,7 +1133,7 @@
        "False"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1064,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1088,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1105,7 +1192,7 @@
        "(None, None)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1123,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1156,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1193,14 +1280,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(<type 'exceptions.TypeError'>, TypeError('f() takes at least 2 arguments (1 given)',), <traceback object at 0x109a75050>)\n"
+      "(<type 'exceptions.TypeError'>, TypeError('f() takes at least 2 arguments (1 given)',), <traceback object at 0x60b23b0>)\n"
      ]
     }
    ],
@@ -1223,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1232,7 +1319,7 @@
        "95"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1246,13 +1333,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We then find a unique set of words using python's `set` data structure. We count how often those words occured usinf the `count` method on lists."
+    "We then find a unique set of words using python's `set` data structure. We count how often those words occured using the `count` method on lists."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 62,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['\\xef\\xbb\\xbfxxxx',\n",
+       " 'hamlet,',\n",
+       " 'prince',\n",
+       " 'of',\n",
+       " 'denmark',\n",
+       " 'by',\n",
+       " 'william',\n",
+       " 'shakespeare',\n",
+       " 'persons',\n",
+       " 'represented.']"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hamletlctokens[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "uniquelctokens=set(hamletlctokens)"
@@ -1260,8 +1378,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
+   "execution_count": 66,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "tokendict={}\n",
@@ -1278,7 +1398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1386,7 +1506,7 @@
        " ('out', 43)]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1437,21 +1557,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.5"
   }
  },
  "nbformat": 4,
