Testing VirtualBox share dir for git and nbconvert alias

--- a/Lab1-babypython_pk.ipynb
+++ b/Lab1-babypython_pk.ipynb
@@ -283,7 +283,7 @@
     {
      "data": {
       "text/plain": [
-       "(<enumerate at 0x620caa0>, [(1, 1), (2, 4), (3, 9), (4, 16), (5, 25)])"
+       "(<enumerate at 0x57abd20>, [(1, 1), (2, 4), (3, 9), (4, 16), (5, 25)])"
       ]
      },
      "execution_count": 9,
@@ -310,7 +310,7 @@
     {
      "data": {
       "text/plain": [
-       "<itertools.izip at 0x620aa28>"
+       "<itertools.izip at 0x57a97a0>"
       ]
      },
      "execution_count": 10,
@@ -349,7 +349,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<enumerate object at 0x620ca00>\n"
+      "<enumerate object at 0x57abdc0>\n"
      ]
     }
    ],
@@ -958,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -968,7 +968,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-35-a2b5f6b81b5d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlastword\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"k\"\u001b[0m\u001b[0;31m#cant change a part of a string\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-37-a2b5f6b81b5d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlastword\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"k\"\u001b[0m\u001b[0;31m#cant change a part of a string\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m: 'str' object does not support item assignment"
      ]
     }
@@ -979,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -988,7 +988,7 @@
        "'.'"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -999,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1008,7 +1008,7 @@
        "']'"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1028,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1037,7 +1037,7 @@
        "\"\\xef\\xbb\\xbfXXXX,HAMLET,,PRINCE,OF,DENMARK,by,William,Shakespeare,PERSONS,REPRESENTED.,Claudius,,King,of,Denmark.,Hamlet,,Son,to,the,former,,and,Nephew,to,the,present,King.,Polonius,,Lord,Chamberlain.,Horatio,,Friend,to,Hamlet.,Laertes,,Son,to,Polonius.,Voltimand,,Courtier.,Cornelius,,Courtier.,Rosencrantz,,Courtier.,Guildenstern,,Courtier.,Osric,,Courtier.,A,Gentleman,,Courtier.,A,Priest.,Marcellus,,Officer.,Bernardo,,Officer.,Francisco,,a,Soldier,Reynaldo,,Servant,to,Polonius.,Players.,Two,Clowns,,Grave-diggers.,Fortinbras,,Prince,of,Norway.,A,Captain.,English,Ambassadors.,Ghost,of,Hamlet's,Father.,Gertrude,,Queen,of,Denmark,,and,Mother,of,Hamlet.,Ophelia,,Daughter,to,Polonius.,Lords,,Ladies,,Officers,,Soldiers,,Sailors,,Messengers,,and,other,Attendants.,SCENE.,Elsinore.,ACT,I.,Scene,I.,Elsinore.,A,platform,before,the,Castle.,[Francisco,at,his,post.,Enter,to,him,Bernardo.],Ber.,Who's,there?,Fran.,Nay,,answer,me:,stand,,and,unfold,yourself.,Ber.,Long,live,the,king!,Fran.,Bernardo?,Ber.,He.,Fra\""
       ]
      },
-     "execution_count": 38,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1058,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1067,7 +1067,7 @@
        "(25, 125)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1082,14 +1082,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<function square at 0x31f7f50> <type 'function'>\n"
+      "<function square at 0x57a8668> <type 'function'>\n"
      ]
     }
    ],
@@ -1106,14 +1106,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3 4 <function square at 0x31f7f50>\n"
+      "3 4 <function square at 0x57a8668>\n"
      ]
     },
     {
@@ -1122,7 +1122,7 @@
        "25"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1143,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1174,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1206,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1215,7 +1215,7 @@
        "True"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1227,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1236,7 +1236,7 @@
        "False"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1254,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1278,7 +1278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1295,7 +1295,7 @@
        "(None, None)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1313,7 +1313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1346,7 +1346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1390,7 +1390,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(<type 'exceptions.TypeError'>, TypeError('f() takes at least 2 arguments (1 given)',), <traceback object at 0x6671050>)\n"
+      "(<type 'exceptions.TypeError'>, TypeError('f() takes at least 2 arguments (1 given)',), <traceback object at 0x57d4758>)\n"
      ]
     }
    ],
@@ -1503,7 +1503,7 @@
     {
      "data": {
       "text/plain": [
-       "<dictionary-itemiterator at 0x6721208>"
+       "<dictionary-itemiterator at 0x57c83c0>"
       ]
      },
      "execution_count": 57,
@@ -1644,7 +1644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1658,7 +1658,7 @@
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYAAAAD8CAYAAAB+UHOxAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAFO5JREFUeJzt3X2QJVV5x/HvA6iIGpaXqS1ciENFSotoVJgoBDUIxqCY\nLIkovkQWgtlY4isaXRMjxMQUJpYowWAhrLsYgiKIrIIaXEDxBXQXcHnTsIHF3Q0vIwKCgLj45I9z\nJtydnZl7Z+68LJ7vp2pquvue7j59bnf/bp++PROZiSSpPdvMdQUkSXPDAJCkRhkAktQoA0CSGmUA\nSFKjDABJapQBIEmNMgAkqVEGgCQ1aru5rsBEdt111xwcHJzrakjSY8rq1at/mpkD3cpt1QEwODjI\nqlWr5roakvSYEhG39lLOLiBJapQBIEmNMgAkqVEGgCQ1ygCQpEYZAJLUKANAkhplAEhSowwASWrU\nVv0kcL8Gl1w4qfLrTjx0hmoiSVsfrwAkqVEGgCQ1ygCQpEYZAJLUKANAkhplAEhSowwASWqUASBJ\njTIAJKlRBoAkNcoAkKRGGQCS1CgDQJIaZQBIUqMMAElqlAEgSY0yACSpUQaAJDXKAJCkRhkAktSo\nrgEQEUsj4s6IuK5j2s4RcXFE3FR/71SnR0ScHBFrI2JNROzTMc+iWv6miFg0M5sjSepVL1cAy4BD\nRk1bAqzMzL2AlXUc4OXAXvVnMXAqlMAAjgdeADwfOH4kNCRJc6NrAGTmt4CfjZq8EFheh5cDh3VM\nPzOLK4B5EbEb8MfAxZn5s8y8G7iYLUNFkjSLpnoPYH5m3laHbwfm1+EFwPqOchvqtPGmS5LmSN83\ngTMzgZyGugAQEYsjYlVErBoeHp6uxUqSRplqANxRu3aov++s0zcCe3SU271OG2/6FjLztMwcysyh\ngYGBKVZPktTNVANgBTDyTZ5FwAUd04+s3wbaD7i3dhV9HXhZROxUb/6+rE6TJM2R7boViIizgQOB\nXSNiA+XbPCcC50TEMcCtwGtq8YuAVwBrgQeAowEy82cR8Y/AD2q5D2Xm6BvLkqRZ1DUAMvN147x0\n8BhlEzh2nOUsBZZOqnaSpBnjk8CS1CgDQJIaZQBIUqMMAElqlAEgSY3q+i2gVg0uuXBS5dedeOgM\n1USSZoZXAJLUKANAkhplAEhSowwASWqUASBJjTIAJKlRBoAkNcoAkKRGGQCS1CgDQJIaZQBIUqMM\nAElqlAEgSY0yACSpUQaAJDXKAJCkRhkAktQoA0CSGmUASFKjDABJapQBIEmN6isAIuJdEXF9RFwX\nEWdHxPYRsWdEXBkRayPi8xHx+Fr2CXV8bX19cDo2QJI0NVMOgIhYALwdGMrMZwHbAq8FPgKclJlP\nB+4GjqmzHAPcXaefVMtJkuZIv11A2wFPjIjtgB2A24CDgHPr68uBw+rwwjpOff3giIg+1y9JmqIp\nB0BmbgQ+CvyEcuK/F1gN3JOZm2qxDcCCOrwAWF/n3VTL7zLV9UuS+tNPF9BOlE/1ewJPBZ4EHNJv\nhSJicUSsiohVw8PD/S5OkjSOfrqAXgrckpnDmfkr4IvAAcC82iUEsDuwsQ5vBPYAqK/vCNw1eqGZ\neVpmDmXm0MDAQB/VkyRNpJ8A+AmwX0TsUPvyDwZuAC4FDq9lFgEX1OEVdZz6+iWZmX2sX5LUh37u\nAVxJuZl7FXBtXdZpwPuA4yJiLaWP/4w6yxnALnX6ccCSPuotSerTdt2LjC8zjweOHzX5ZuD5Y5R9\nCHh1P+uTJE0fnwSWpEYZAJLUKANAkhplAEhSowwASWqUASBJjTIAJKlRBoAkNcoAkKRGGQCS1Ki+\n/hSExja45MJJz7PuxENnoCaSND6vACSpUQaAJDXKAJCkRhkAktQoA0CSGmUASFKjDABJapQBIEmN\n8kGwrdBkHyTzITJJU+EVgCQ1ygCQpEYZAJLUKANAkhplAEhSowwASWqUASBJjTIAJKlRfQVARMyL\niHMj4kcRcWNE7B8RO0fExRFxU/29Uy0bEXFyRKyNiDURsc/0bIIkaSr6vQL4BPC1zHwm8BzgRmAJ\nsDIz9wJW1nGAlwN71Z/FwKl9rluS1IcpB0BE7Ai8GDgDIDMfzsx7gIXA8lpsOXBYHV4InJnFFcC8\niNhtyjWXJPWlnyuAPYFh4DMRcXVEnB4RTwLmZ+ZttcztwPw6vABY3zH/hjptMxGxOCJWRcSq4eHh\nPqonSZpIPwGwHbAPcGpmPg/4BY929wCQmQnkZBaamadl5lBmDg0MDPRRPUnSRPoJgA3Ahsy8so6f\nSwmEO0a6durvO+vrG4E9OubfvU6TJM2BKQdAZt4OrI+IZ9RJBwM3ACuARXXaIuCCOrwCOLJ+G2g/\n4N6OriJJ0izr9/8BvA04KyIeD9wMHE0JlXMi4hjgVuA1texFwCuAtcADtawkaY70FQCZeQ0wNMZL\nB49RNoFj+1mfJGn6+CSwJDXKAJCkRhkAktQoA0CSGmUASFKjDABJapQBIEmNMgAkqVH9Pgmsrczg\nkgsnVX7diYfOUE0kbe28ApCkRnkFoP832asH8ApCeiwzADRt7H6SHlvsApKkRhkAktQoA0CSGmUA\nSFKjDABJapQBIEmNMgAkqVEGgCQ1ygCQpEYZAJLUKANAkhplAEhSowwASWqUASBJjTIAJKlRff8/\ngIjYFlgFbMzMV0bEnsDngF2A1cAbM/PhiHgCcCawL3AXcERmrut3/frN4P8SkGbfdFwBvAO4sWP8\nI8BJmfl04G7gmDr9GODuOv2kWk6SNEf6ugKIiN2BQ4EPA8dFRAAHAa+vRZYDJwCnAgvrMMC5wCkR\nEZmZ/dRBAq8gpKno9wrg48B7gV/X8V2AezJzUx3fACyowwuA9QD19XtreUnSHJhyAETEK4E7M3P1\nNNaHiFgcEasiYtXw8PB0LlqS1KGfK4ADgD+NiHWUm74HAZ8A5kXESNfS7sDGOrwR2AOgvr4j5Wbw\nZjLztMwcysyhgYGBPqonSZrIlAMgM9+fmbtn5iDwWuCSzHwDcClweC22CLigDq+o49TXL7H/X5Lm\nzkw8B/A+yg3htZQ+/jPq9DOAXer044AlM7BuSVKP+n4OACAzLwMuq8M3A88fo8xDwKunY32SpP75\nJLAkNcoAkKRGGQCS1KhpuQcgPZb5FLFa5RWAJDXKAJCkRtkFJPVhst1HYBeSth5eAUhSowwASWqU\nXUDSHOrnG0h+e0n98gpAkhplAEhSowwASWqUASBJjfImsNQgn18QeAUgSc0yACSpUQaAJDXKAJCk\nRnkTWNKk+RTybwYDQNKsMjy2HnYBSVKjvAKQ9Jjh8wvTyysASWqUVwCSmuH9h815BSBJjfIKQJJ6\n0O/9h63x6sMrAElq1JQDICL2iIhLI+KGiLg+It5Rp+8cERdHxE319051ekTEyRGxNiLWRMQ+07UR\nkqTJ6+cKYBPw7szcG9gPODYi9gaWACszcy9gZR0HeDmwV/1ZDJzax7olSX2acgBk5m2ZeVUdvg+4\nEVgALASW12LLgcPq8ELgzCyuAOZFxG5TrrkkqS/Tcg8gIgaB5wFXAvMz87b60u3A/Dq8AFjfMduG\nOm30shZHxKqIWDU8PDwd1ZMkjaHvAIiIJwPnAe/MzJ93vpaZCeRklpeZp2XmUGYODQwM9Fs9SdI4\n+gqAiHgc5eR/VmZ+sU6+Y6Rrp/6+s07fCOzRMfvudZokaQ708y2gAM4AbszMj3W8tAJYVIcXARd0\nTD+yfhtoP+Dejq4iSdIs6+dBsAOANwLXRsQ1ddrfAicC50TEMcCtwGvqaxcBrwDWAg8AR/exbklS\nn6YcAJn5bSDGefngMconcOxU1ydJml4+CSxJjTIAJKlRBoAkNcoAkKRGGQCS1CgDQJIaZQBIUqMM\nAElqlAEgSY0yACSpUQaAJDXKAJCkRhkAktQoA0CSGmUASFKjDABJapQBIEmNMgAkqVEGgCQ1ygCQ\npEYZAJLUKANAkhplAEhSowwASWqUASBJjTIAJKlRBoAkNWrWAyAiDomIH0fE2ohYMtvrlyQVsxoA\nEbEt8Eng5cDewOsiYu/ZrIMkqZjtK4DnA2sz8+bMfBj4HLBwlusgSWL2A2ABsL5jfEOdJkmaZZGZ\ns7eyiMOBQzLzTXX8jcALMvOtHWUWA4vr6DOAH89aBWFX4KdzMO9crtt6t7Nu693Oup+WmQNdS2Xm\nrP0A+wNf7xh/P/D+2axDl/qtmot553Ld1ruddVvvttbdy89sdwH9ANgrIvaMiMcDrwVWzHIdJEnA\ndrO5sszcFBFvBb4ObAsszczrZ7MOkqRiVgMAIDMvAi6a7fX26LQ5mncu122921m39W5r3V3N6k1g\nSdLWwz8FIUmNaioAImJeRLylDh8YEV+ZpfXeP149pnk9b4+IGyPirOle9kyIiO/OZPlJLHcwIq6b\nhuX0tX9FxFER8dRxXvtuR11fP4llTraNx2yLiPhQRLx0MsvqYV3jbm99/aLappsdL51t22ubR8Tp\nM/lXB6Z67E1236vb+AeTr+HYmgoAYB4w7SfeKZiperwF+KPMfMMMLHvaZeakduTJlp8D/b6vRwFj\nnhA7tn0Q6DkApqvNMvODmfmN6VhWh6MYZ3vrOl+Rmfcwcbv21OaZ+abMvGEqlexRz8deRPRz7/VA\nYPqOg5n+nunW9EP50xMPAtdQvpJ6GXAu8CPgLB69J7Iv8E1gNeUbS7sBX6rj1wOLa7n7gQ8DPwSu\nAObX6XsC3wOuBf4JuH+Cevxr/bmulj+ix205rs5zHfBO4FPAw3UZ7+pxGVts0zjlBmsbLQP+u7bV\nS4HvADdR/sTHTcBALb8NsHZkfILl3t9LPUeXpxwEY7539fUPAe/sGP8w8I6x2rkuayVwI/Bp4K5a\n5onAX9X95IfAecAOdZ5lwKn1Pb+5LmMpcC+wqYf964P19esoN/oCOLzuTz+u8z9xnG2/oq7nml7e\n5475dgO+Vee7DnjRBO/1SFtcD/xXbYtlwOG1zInADcAa4KM9zPvcWu81wPnATnV7fwncUet0MnBJ\nXc5Btb3WUR6GGn28dL7/P++xzS8DhijfPrwGuK3uB++i+/7xlY5tPAU4qg6vAz4CDNc6XAu8m3Jc\nranb/Hu17AnAZynHzNljHFtn1bY7F9hhZNtrmaFa/0HgdmBj3YYx38NJHVMzfdLdmn5qA17X8cbe\nC+xOOWF9D3gh8Djguzx6MjuCcnDvXMefWHeSXYAE/qRO/xfgA3V4BXBkHT6WLQOgsx6vAi6uO+Z8\n4CfAbl22Y9+6sz0JeDLlYHte507TY3tssU0TtNsm4Nm1rVbXNgnK33L6EnA89aQLvAw4r4f19xMA\nW7x3o+p7VR3eBvif8dqZRwNgE+VEdQrwfeAvOtuDEuRvq8PLKCelke3/eW2bPSknqudOVMeRdq/D\nn+3Yhy4DhnrY9q9Moc3eDfxdHd4WeEqX9/q5dfyc2hbLKCftXSghNXJindfDvGuAP6zTPgR8vA5f\nBXyjDl9e2/1xdV/6ax4NgEHq8TLG+78n8ADl2J2ozS+jnEj3resa2T926mH/mCgA3tsxvCvwb8Dx\nddpBwDV1+ATKcTM62Acp55ED6vhS4D2MEQAdy3lPP+fBzp/WuoBG+35mbsjMX1MSdZDy5yeeBVwc\nEdcAH6DsUG+PiJFP+nsAe1E+cY/0Oa6u8wMcAJxdhz/bpQ4vpHwieCQz76Bcefx+D/Ocn5m/yMz7\ngS8CL+q+uVsYa5vGc0tmXlvb6npgZZY98lrKdi8Fjqxl/xL4zBTqMxljvXcAZOY64K6IeB4ljK6m\nezvfkpnX1OF1dXnPiojLI+Ja4A3A73aU/3LH9t+RmddSDuSHOuoyXh1fEhFX1uUeNGq5M+UHwNER\ncQLw7My8b4KynW3RuV9DOcE+BJwREX9OOflONO/vUELim3XacuDFdfg+4JkR8VuUq4HvUU52L6Kc\npCfy/czcQGnzB+ne5iNupnQ77RoRxwL70dv+MZ7Pjxp/IfWYz8xLgF3q9gGsyMwHx1jG+sz8Th3+\nj7qMWdF6APyyY/gRynMRAVyfmc+tP88G/pnS5bF/Zj6HssNsD/yqngQ65x+xVX+/NiIOZOxtGk9n\nW/26Y/zXwHaZuR64IyIOonQJfXXaKz1+fUa3PcDplD7moynhNJ5NlONgZHnbU7eJ8qn3rXUf+Ac2\nb5/O7e+sCx112aKOEbE98O+U7pRnU7pLJmr3aZGZ36KceDcCyyLiyAmKj9u2mbmJ8v6eC7wS+FqX\needNVC3gfynv03cpJ/2XAE+ndIdMpOc232yFmXcDzwG+QOlG/SS97R8jRr9Xv+hSz17Kjj5X5Kj1\nztj+0VoA3Ac8pUuZHwMDEbE/QEQ8jnJFcHdmPhARz6R8apjIdyh/5gLKJ8eJ6nE5cEREbBsRA5SD\n9Ptdln85cFhE7BARTwL+jO6fmEbbkcltUy9Op3yC+UJmPjINy+vH+cAhlE9xX2f8dr6VcuUTETEP\nOLhjGU8Bbqv7QC831u+jdGFMZORg/mlEPJnSrdI5f7f9s5cyW4iIp1GuVD5NeZ/2mewy6nKeDOyY\n5YHOd1FOphO5F7g7IkauUN9I+XQNZVtuoHR5fIvyHr0ZuLrjg9VIufG2uZc276z/rpTz3vvr7wV0\n3z/2jognjLF/jOVy6r5SP2T9NDN/3mWe3x4531Bu8H+bchW6b532qo6yU3r/xzPrTwLPpcy8KyK+\nU7929SDlBtToMg/Xv1p6ckTsSGmjUyif3m6kBMQVXVb1DuA/I+J9wAVd6vFVSh/pDynJ/97MvL3L\ndlwVEct4NChOz8yrI6JLtTbzNeDNk9imXqygdP3MdPdPV/V9vBS4JzMfiYjzKX+McIt2rl8dPJrS\nZ311x2L+HriScpPvSrocePV9vRP4GGXfmh8RQ5m5qqPMPRHxaco9l9spXTMjlgGfiogHKVdmY3UX\nrAEeqV13yzLzpN5ahAOBv4mIX1FuNk90BTCRpwAX1CuZoHyK7mYRZbt2oHTBHF2nLwM+Tulivbq2\n30OM+jAzxvFy4ajXbqfco7mNMY7pURZQ9s9tRralh/3jHMr7dQub7x9jOQFYGhFrKN1ji7qUh3L8\nHRsRSymBeCrl2D4jIv6Rcv9ixJeBcyNiIeWe1GQ/+G3GJ4E1bSJiCDgpM6dyP2K667IN5SbjqzPz\nprmuj7Yu7h9Fa11AmiFR/r/zeZRL67muy96Ur6GubPng1tjcPx7lFYAkNcorAElqlAEgSY0yACSp\nUQaAJDXKAJCkRhkAktSo/wOHl5AcVzxeWwAAAABJRU5ErkJggg==\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x31fcd10>"
+       "<matplotlib.figure.Figure at 0x5c10710>"
       ]
      },
      "metadata": {},
